FIX: Made header visible.
The margin-top was only 40px, which wasn't enough to make the header visible and therefore hid some of the content. I brought that up to 90px, which fixed the issue.

--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ nav li a {
 }
 header {
 	text-align: left;
-	margin-top: 40px;
+	margin-top: 90px;
 	margin-bottom: 0;
 }
 .currentPage {
